syntax = "proto3";

package feed.service.v1;

import "google/api/annotations.proto";

option go_package = "github.com/toomanysource/atreus/api/feed/service/v1;v1";

// FeedService 用来给feed服务发送请求
service FeedService {
  // 请求 Feed List
  rpc FeedList(ListFeedRequest) returns (ListFeedReply) {
    option (google.api.http) = {get: "/douyin/feed"};
  }
}

message ListFeedRequest {
  // 返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  string latest_time = 1;
  // 用户鉴权token
  string token = 2;
}

message ListFeedReply {
  // 状态码，0-成功，其他值-失败
  int32 status_code = 1 [json_name = "status_code"];
  // 返回状态描述
  string status_msg = 2 [json_name = "status_msg"];
  // 视频列表
  repeated Video video_list = 3 [json_name = "video_list"];
  // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
  int64 next_time = 4 [json_name = "next_time"];
}

// 视频信息
message Video {
  // 视频唯一标识
  uint32 id = 1 [json_name = "id"];
  // 视频作者信息
  User author = 2 [json_name = "author"];
  // 视频播放地址
  string play_url = 3 [json_name = "play_url"];
  // 视频封面地址
  string cover_url = 4 [json_name = "cover_url"];
  // 视频的点赞总数
  uint32 favorite_count = 5 [json_name = "favorite_count"];
  // 视频的评论总数
  uint32 comment_count = 6 [json_name = "comment_count"];
  // true-已点赞，false-未点赞
  bool is_favorite = 7 [json_name = "is_favorite"];
  // 视频标题
  string title = 8 [json_name = "title"];
}
message User {
  // 用户id
  uint32 id = 1 [json_name = "id"];
  // 用户名称
  string name = 2 [json_name = "name"];
  // 关注总数
  uint32 follow_count = 3 [json_name = "follow_count"];
  // 粉丝总数
  uint32 follower_count = 4 [json_name = "follower_count"];
  // true-已关注，false-未关注
  bool is_follow = 5 [json_name = "is_follow"];
  //用户头像
  string avatar = 6 [json_name = "avatar"];
  //用户个人页顶部大图
  string background_image = 7 [json_name = "background_image"];
  //个人简介
  string signature = 8 [json_name = "signature"];
  //获赞数量
  uint32 total_favorited = 9 [json_name = "total_favorited"];
  //作品数量
  uint32 work_count = 10 [json_name = "work_count"];
  //点赞数量
  uint32 favorite_count = 11 [json_name = "favorite_count"];
}